--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
-      "ts-node": "10.7.0",
       "@types/node": "^16.11.10",
+      "ts-node": "10.7.0",
       "typescript": "4.5.2"
    },
    "dependencies": {
-      "typeorm": "0.3.16",
-      "reflect-metadata": "^0.1.13",
-      "pg": "^8.5.1",
+      "body-parser": "^1.19.1",
+      "dotenv": "^16.3.1",
       "express": "^4.17.2",
-      "body-parser": "^1.19.1"
+      "pg": "^8.5.1",
+      "reflect-metadata": "^0.1.13",
+      "typeorm": "0.3.16",
+      "zod": "^3.21.4"
    },
    "scripts": {
       "start": "ts-node src/index.ts",
