--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
    "devDependencies": {
       "@types/node": "^16.11.10",
       "ts-node": "10.7.0",
-      "typescript": "4.5.2"
    },
    "dependencies": {
       "body-parser": "^1.19.1",
@@ -15,7 +14,8 @@
       "pg": "^8.5.1",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.16",
-      "zod": "^3.21.4"
+      "zod": "^3.21.4",
+      "typescript": "4.5.2"
    },
    "scripts": {
       "start": "ts-node src/index.ts",
