--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
    "type": "commonjs",
    "devDependencies": {
       "@types/node": "^16.11.10",
-      "ts-node": "10.7.0",
+      "ts-node": "10.7.0"
    },
    "dependencies": {
       "body-parser": "^1.19.1",
