--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
-      "@types/node": "^16.11.10",
       "ts-node": "10.7.0"
    },
    "dependencies": {
@@ -15,7 +14,8 @@
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.16",
       "zod": "^3.21.4",
-      "typescript": "4.5.2"
+      "typescript": "4.5.2",
+      "@types/node": "^16.11.10"
    },
    "scripts": {
       "start": "ts-node src/index.ts",
