--- a/.env example
+++ b/.env example
@@ -1,7 +1,7 @@
 POSTGRES_USER=""
 POSTGRES_PASSWORD=""
 POSTGRES_DB=""
-POSTGRES_HOST="db" # Do not change this, it is defined in docker-compose.yml
+POSTGRES_SOCKET="/var/run/postgresql" # Do not change this, it is required by postgres
 NODE_ENV=""
 PROD_URL=""
 PORT=
