--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,26 @@
-version: '3'
+version: '3.8'
 
 services:
-  db: # If you change this here, remember to change it in .env and .env.example as well
-    image: "postgres:14.5"
-    ports:
-      - "5432:5432"
+  db:
+    image: "postgres:15.3-bookworm"
     env_file:
       - .env
+    volumes:
+      - "./postgres/socket:${POSTGRES_SOCKET}"
+    healthcheck:
+      test: ["CMD", "pg_isready", "-d", "${POSTGRES_DB}"]
+      interval: 10s
+      timeout: 30s
+      retries: 3
+
   backend:
     build: .
     env_file:
       - .env
+    depends_on:
+      db:
+        condition: service_healthy
     ports:
       - "${PORT}:${PORT}"
+    volumes:
+      - "./postgres/socket:${POSTGRES_SOCKET}"
