--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
+      "@types/body-parser": "^1.19.2",
+      "@types/express": "^4.17.17",
       "ts-node": "10.7.0"
    },
    "dependencies": {
+      "@types/node": "^16.11.10",
       "body-parser": "^1.19.1",
       "dotenv": "^16.3.1",
       "express": "^4.17.2",
       "pg": "^8.5.1",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.16",
-      "zod": "^3.21.4",
       "typescript": "4.5.2",
-      "@types/node": "^16.11.10"
+      "zod": "^3.21.4"
    },
    "scripts": {
       "start": "ts-node src/index.ts",
