--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,6 @@
       "outDir": "./build",
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
-      "sourceMap": true,
-      "strict": true
+      "sourceMap": true
    }
 }
