--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
       "ts-node": "10.7.0"
    },
    "dependencies": {
-      "@types/express": "^4.17.17",
       "@types/body-parser": "^1.19.2",
+      "@types/express": "^4.17.17",
       "@types/node": "^16.11.10",
       "body-parser": "^1.19.1",
       "dotenv": "^16.3.1",
       "express": "^4.17.2",
+      "openid-client": "^5.4.2",
       "pg": "^8.5.1",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.16",
