--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
    "scripts": {
       "start": "ts-node src/index.ts",
       "typeorm": "typeorm-ts-node-commonjs"
+   },
+   "pnpm": {
+      "patchedDependencies": {
+         "jose@4.14.4": "patches/jose@4.14.4.patch"
+      }
    }
 }
