--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
       "@types/express": "^4.17.17",
       "@types/node": "^16.11.10",
       "body-parser": "^1.19.1",
+      "cookie-parser": "^1.4.6",
       "dotenv": "^16.3.1",
       "express": "^4.17.2",
       "openid-client": "^5.4.2",
