docs: update env.example to accomodate authentication

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ POSTGRES_SOCKET="/var/run/postgresql" # Do not change this, it is required by po
 NODE_ENV=""
 PROD_URL=""
 PORT=
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
