--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 POSTGRES_USER=""
+PGUSER="" # should be same as POSTGRES_USER
 POSTGRES_PASSWORD=""
-POSTGRES_DB=""
-POSTGRES_SOCKET="/var/run/postgresql" # Do not change this, it is required by postgres
+POSTGRES_DB="" # should be same as POSTGRES_USER for some reason
 NODE_ENV=""
 PROD_URL=""
 PORT=
