--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
       "outDir": "./build",
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
+      "resolveJsonModule": true,
+      "esModuleInterop": true,
       "sourceMap": true,
       "strict": true
    }
