build: add ingestion command to docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,16 @@ services:
         condition: service_healthy
     ports:
       - "${PORT}:${PORT}"
+
+  ingestion:
+    command: ["dumb-init", "node", "build/ingest.js"]
+    build: .
+    env_file:
+      - .env
+    depends_on:
+      db:
+        condition: service_healthy
+    ports:
+      - "${PORT}:${PORT}"
+    profiles:
+      - "ingestion"
