--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "lib": ["es5", "es6"],
     "target": "es5",
-    "downlevelIteration": true, // for-of loop
+    "downlevelIteration": true,
     "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "./build",
