--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Awesome project developed with TypeORM.",
   "type": "commonjs",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "eslint": "^8.44.0",
     "ts-node": "10.7.0"
   },
   "dependencies": {
