--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -5,7 +5,7 @@ on:
   - pull_request
 
 jobs:
-  cache-and-install:
+  linting:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -39,9 +39,6 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install
-  checks:
-    runs-on: ubuntu-latest
-    steps:
       - name: Checkout repo
         uses: actions/checkout@v2
       - name: Run prettier
