ci: update trigger rules to avoid duplication of checks on PRs from branches of same repo
See https://github.com/orgs/community/discussions/26276 for details

--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -1,8 +1,12 @@
 name: Lint code with ESLint and check formatting with Prettier
 
 on:
-  - push
-  - pull_request
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   linting:
