--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "ts-node": "10.7.0"
   },
   "dependencies": {
-    "@types/cookie-parser": "^1.4.3",
     "@types/body-parser": "^1.19.2",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/node": "^16.11.10",
     "body-parser": "^1.19.1",
