--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,25 @@ services:
       timeout: 30s
       retries: 3
 
-  backend:
+  backend-dev:
+    build:
+      context: .
+      dockerfile: ./docker/dev/Dockerfile
+    env_file:
+      - .env
+    depends_on:
+      db:
+        condition: service_healthy
+    volumes:
+      - ./patches:/usr/local/app/patches
+      - ./src:/usr/local/app/src
+      - ./package.json:/usr/local/app/package.json
+      - ./tsconfig.json:/usr/local/app/tsconfig.json
+      - ./pnpm-lock.yaml:/usr/local/app/pnpm-lock.yaml
+    ports:
+      - "${PORT}:${PORT}"
+
+  backend-prod:
     build:
       context: .
       dockerfile: ./docker/prod/Dockerfile
