--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "type": "commonjs",
   "devDependencies": {
     "@types/eslint": "^8.40.2",
+    "@types/jest": "^29.5.2",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.22",
+    "jest": "^29.5.0",
     "prettier": "^2.8.8",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "10.7.0"
   },
   "dependencies": {
