--- a/package.json
+++ b/package.json
@@ -10,22 +10,24 @@
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "nodemon": "^2.0.22",
     "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "10.7.0"
   },
   "dependencies": {
-    "@types/jest": "^29.5.2",
-    "@types/supertest": "^2.0.12",
+    "@types/cors": "^2.8.13",
     "@types/body-parser": "^1.19.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
     "@types/node": "^16.11.10",
+    "@types/supertest": "^2.0.12",
     "body-parser": "^1.19.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.17.2",
     "openid-client": "^5.4.2",
