feat: add frontend url env var

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ POSTGRES_DB="" # should be same as POSTGRES_USER for some reason
 DB_HOST="db"
 NODE_ENV="development"
 PROD_URL="http://localhost:3000"
+FRONTEND_URL="http://localhost:5173"
 PORT=3000
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
