--- a/.env.testing
+++ b/.env.testing
@@ -5,6 +5,7 @@ POSTGRES_DB="chrono" # should be same as POSTGRES_USER for some reason
 DB_HOST="db-testing"
 NODE_ENV="development"
 PROD_URL="http://localhost:3000"
+FRONTEND_URL="http://localhost:5173"
 PORT=3000
 GOOGLE_CLIENT_ID="859305615575-i9o0mr1vfh728u1a0tj227qbosbrk4rk.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
