--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "sourceMap": true,
-    "strict": true
+    "strict": true,
+    "typeRoots": ["src/types/*/**", "./node_modules/@types"]
   }
 }
