build: move postgres port to env var to avoid clash between staging and prod db

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ POSTGRES_USER=""
 PGUSER="" # should be same as POSTGRES_USER
 POSTGRES_PASSWORD=""
 POSTGRES_DB="" # should be same as POSTGRES_USER for some reason
+POSTGRES_PORT=5432
 DB_HOST="db"
 NODE_ENV="development"
 PROD_URL="http://localhost:3000"
