build: make postgres run on specified port internally as well
Docker internal container DNS seems to resolve to the internal ports on the container instead of the ports exposed to the host.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     env_file:
       - .env
     ports:
-      - "${POSTGRES_PORT}:5432"
+      - "${PGPORT}:${PGPORT}"
     healthcheck:
       test: ["CMD", "pg_isready", "-d", "${POSTGRES_DB}"]
       interval: 10s
