--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     env_file:
       - .env.testing
     ports:
-      - "5432:5432"
+      - "${PGPORT}:${PGPORT}"
     volumes:
       - ./data:/var/lib/postgresql/data
     healthcheck:
