--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "ts-node": "10.7.0"
   },
   "dependencies": {
-    "@types/cors": "^2.8.13",
     "@types/body-parser": "^1.19.2",
     "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^16.11.10",
@@ -28,6 +28,7 @@
     "body-parser": "^1.19.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cross-fetch": "^4.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.17.2",
     "openid-client": "^5.4.2",
