--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "cross-fetch": "^4.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.17.2",
+    "jsonwebtoken": "^9.0.1",
+    "@types/jsonwebtoken": "^9.0.2",
     "openid-client": "^5.4.2",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
