build: add env vars for public and private key for jwt encryption

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@ FRONTEND_URL="http://localhost:5173"
 PORT=3000
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
+JWT_PRIVATE_KEY=""
+JWT_PUBLIC_KEY=""
