--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,3 +99,39 @@ services:
     tty: true
     profiles:
       - "testing"
+
+  frontend-dev:
+    init: true
+    build:
+      context: ./frontend/
+      dockerfile: ./docker/dev/Dockerfile
+    env_file:
+      - .env
+    volumes:
+      - type: bind
+        source: ./frontend
+        target: /usr/local/app
+      - type: volume
+        target: /usr/local/app/node_modules
+      - type: bind
+        source: ./frontend/vite.config.ts
+        target: /usr/local/app/vite.config.ts
+    ports:
+      - "${FRONTEND_PORT}:${FRONTEND_PORT}"
+    profiles:
+      - "dev"
+
+  nginx-dev:
+    image: "nginx:1.25.3-alpine-slim"
+    depends_on:
+      - frontend-dev
+      - backend-dev
+    env_file:
+      - .env
+    volumes:
+      - ./nginx.dev.conf:/etc/nginx/nginx.conf
+      - ./logs/nginx:/usr/log/
+    ports:
+      - "${NGINX_PORT}:80"
+    profiles:
+      - "dev"
