--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@radix-ui/react-select": "^2.0.0",
+		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-toast": "^1.1.5",
 		"@tanstack/react-query": "^5.15.0",
 		"@tanstack/react-query-devtools": "^5.15.0",
