refactor: move common type definitions to a separate lib folder

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -13,5 +13,10 @@
     "sourceMap": true,
     "strict": true,
     "typeRoots": ["src/types/*/**", "./node_modules/@types"]
-  }
+  },
+  "references": [
+    {
+      "path": "../lib"
+    }
+  ]
 }
