--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
-		"build": "tsc && vite build",
+		"build": "tsc --build && vite build",
 		"preview": "vite preview"
 	},
 	"dependencies": {
