--- a/backend/docker/prod/Dockerfile
+++ b/backend/docker/prod/Dockerfile
@@ -1,24 +1,38 @@
 FROM node:20.10.0-slim AS build-stage
 ENV NODE_ENV production
-WORKDIR /usr/src/app
+WORKDIR /usr/src/app/backend
 
 ENV PNPM_HOME="/root/.local/share/pnpm"
 ENV PATH="${PATH}:${PNPM_HOME}"
 
-COPY --chown=node:node tsconfig.json ./
-COPY --chown=node:node .env* ./
+COPY --chown=node:node ./backend/tsconfig.json ./
+COPY --chown=node:node ./backend/.env* ./
 
 RUN npm install -g pnpm
 
-COPY package.json ./
-COPY pnpm-lock.yaml ./
+COPY ./backend/package.json ./
+COPY ./backend/pnpm-lock.yaml ./
 
 RUN pnpm fetch --prod
 RUN pnpm install -r --offline --prod
 
-COPY --chown=node:node src ./
+COPY --chown=node:node ./backend/src ./src
 
-RUN pnpm tsc
+WORKDIR /usr/src/app/lib
+
+COPY --chown=node:node ./lib/tsconfig.json ./
+
+COPY ./lib/package.json ./
+COPY ./lib/pnpm-lock.yaml ./
+
+RUN pnpm fetch --prod
+RUN pnpm install -r --offline --prod
+
+COPY --chown=node:node ./lib/src ./src
+
+WORKDIR /usr/src/app/backend
+
+RUN pnpm tsc --build
 
 FROM node:20.10.0-slim
 ENV NODE_ENV production
@@ -28,9 +42,10 @@ ENV PNPM_HOME="/root/.local/share/pnpm"
 ENV PATH="${PATH}:${PNPM_HOME}"
 
 RUN apt-get update && apt-get install -y --no-install-recommends dumb-init && apt-get clean && rm -rf /var/lib/apt/lists/*
-COPY --chown=node:node --from=build-stage /usr/src/app/node_modules /usr/src/app/node_modules
+COPY --chown=node:node --from=build-stage /usr/src/app/backend/node_modules /usr/src/app/backend/node_modules
+COPY --chown=node:node --from=build-stage /usr/src/app/lib /usr/src/app/lib
 
-COPY --chown=node:node --from=build-stage /usr/src/app/build /usr/src/app/build
+COPY --chown=node:node --from=build-stage /usr/src/app/backend/build /usr/src/app/backend/build
 
 USER node
-CMD ["dumb-init", "node", "build/index.js"]
+CMD ["dumb-init", "node", "backend/build/index.js"]
