--- a/frontend/docker/dev/Dockerfile
+++ b/frontend/docker/dev/Dockerfile
@@ -5,16 +5,32 @@ ENV PATH="$PNPM_HOME:$PATH"
 
 RUN corepack enable
 
-WORKDIR /usr/local/app
+WORKDIR /usr/local/app/frontend
 
-COPY package.json ./
-COPY pnpm-lock.yaml ./
-COPY tsconfig.json ./
-COPY tsconfig.node.json ./
-COPY biome.json ./
+COPY ./frontend/package.json ./
+COPY ./frontend/pnpm-lock.yaml ./
+COPY ./frontend/tsconfig.json ./
+COPY ./frontend/tsconfig.node.json ./
+COPY ./frontend/biome.json ./
+COPY ./.env ./
 
 RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
 
-COPY . .
+WORKDIR /usr/local/app/lib
+
+COPY ./lib/package.json ./
+COPY ./lib/pnpm-lock.yaml ./
+COPY ./lib/tsconfig.json ./
+
+RUN pnpm fetch
+RUN pnpm install -r --offline
+
+COPY ./lib/src /usr/local/app/lib/src
+
+RUN pnpm tsc --build
+
+WORKDIR /usr/local/app/frontend
+
+COPY ./frontend ./
 
 CMD ["pnpm", "run", "dev", "--host"]
