--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "lib": ["es5", "es6"],
-    "target": "es5",
+    "lib": ["ES2020"],
+    "target": "ES2020",
     "downlevelIteration": true,
     "module": "commonjs",
     "moduleResolution": "node",
