--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -53,6 +53,6 @@ jobs:
         run: pnpm install
         working-directory: "./frontend"
 
-      - name: Run biomejs linter and formatter on backend
+      - name: Run biomejs linter and formatter on frontend
         run: pnpm biome ci .
-        working-directory: "./backend"
+        working-directory: "./frontend"
