--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,7 @@ FRONTEND_URL="http://localhost:5000"
 BACKEND_PORT=3000
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
+JWT_PRIVATE_KEY=""
+JWT_PUBLIC_KEY=""
 FRONTEND_PORT=5173
 NGINX_PORT=5000
