--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.4.1",
     "@types/eslint": "^8.56.0",
+    "@types/jsonwebtoken": "^9.0.5",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "eslint": "^8.56.0",
@@ -32,6 +33,7 @@
     "cross-fetch": "^4.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "openid-client": "^5.6.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.1",
