--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
 		"@radix-ui/react-select": "^2.0.0",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-toast": "^1.1.5",
+		"@radix-ui/react-tooltip": "^1.0.7",
 		"@tanstack/react-query": "^5.15.0",
 		"@tanstack/react-query-devtools": "^5.15.0",
 		"@tanstack/react-router": "^1.0.0",
