--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
-    "lib": ["ES2020"],
-    "target": "ES2020",
+    "lib": ["ES2022"],
+    "target": "ES2022",
     "downlevelIteration": true,
-    "module": "commonjs",
-    "moduleResolution": "node",
+    // Has to be NodeNext to allow for required "with { type: 'json' }" syntax: https://stackoverflow.com/a/70106896
+    "module": "NodeNext",
+    "moduleResolution": "Node16",
     "outDir": "build",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -14,6 +15,7 @@
     "strict": true,
     "typeRoots": ["src/types/*/**", "./node_modules/@types"]
   },
+  "include": ["src/**/*", "../lib/**/*"],
   "references": [
     {
       "path": "../lib"
