build: move lib to ES module, and refactor code to fit ESM structure

--- a/lib/package.json
+++ b/lib/package.json
@@ -2,8 +2,8 @@
   "name": "lib",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index",
-  "types": "dist/index",
+  "type": "module",
+  "module": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
