--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,6 @@
     "ts-node": "10.9.2"
   },
   "dependencies": {
-    "tsx": "^4.7.0",
     "@types/body-parser": "^1.19.5",
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
@@ -36,6 +35,8 @@
     "openid-client": "^5.6.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.1",
+    "sqids": "^0.3.0",
+    "tsx": "^4.7.0",
     "typeorm": "0.3.17",
     "typescript": "5.3.3",
     "zod": "^3.22.4"
