build: change FRONTEND_PORT to FRONTEND_DEV_PORT to make name clearer

--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,5 @@ FRONTEND_URL="http://localhost:5000"
 BACKEND_PORT=3000
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
-FRONTEND_PORT=5173
+FRONTEND_DEV_PORT=5173
 NGINX_PORT=5000
