--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,49 +1,49 @@
 {
-	"name": "chronofactorem-rewrite-frontend",
-	"private": true,
-	"version": "0.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc --build && vite build",
-		"preview": "vite preview"
-	},
-	"dependencies": {
-		"@radix-ui/react-alert-dialog": "^1.0.5",
-		"@radix-ui/react-dialog": "^1.0.5",
-		"@radix-ui/react-dropdown-menu": "^2.0.6",
-		"@radix-ui/react-label": "^2.0.2",
-		"@radix-ui/react-select": "^2.0.0",
-		"@radix-ui/react-slot": "^1.0.2",
-		"@radix-ui/react-switch": "^1.0.3",
-		"@radix-ui/react-toast": "^1.1.5",
-		"@radix-ui/react-tooltip": "^1.0.7",
-		"@tanstack/react-query": "^5.15.0",
-		"@tanstack/react-query-devtools": "^5.15.0",
-		"@tanstack/react-router": "^1.0.0",
-		"@tanstack/router-devtools": "^1.0.0",
-		"axios": "^1.6.3",
-		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.0.0",
-		"lucide": "^0.302.0",
-		"lucide-react": "^0.302.0",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"tailwind-merge": "^2.2.0",
-		"tailwindcss-animate": "^1.0.7",
-		"zod": "^3.22.4"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "1.4.1",
-		"@types/node": "^20.10.5",
-		"@types/react": "^18.2.43",
-		"@types/react-dom": "^18.2.17",
-		"@vitejs/plugin-react-swc": "^3.5.0",
-		"autoprefixer": "^10.4.16",
-		"postcss": "^8.4.32",
-		"postcss-load-config": "^5.0.2",
-		"tailwindcss": "^3.4.0",
-		"typescript": "^5.2.2",
-		"vite": "^5.0.8"
-	}
+  "name": "chronofactorem-rewrite-frontend",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc --build && vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "^5.15.0",
+    "@tanstack/react-query-devtools": "^5.15.0",
+    "@tanstack/react-router": "^1.0.0",
+    "@tanstack/router-devtools": "^1.0.0",
+    "axios": "^1.6.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide": "^0.302.0",
+    "lucide-react": "^0.302.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "vite": "^5.0.8",
+    "typescript": "^5.2.2",
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "postcss-load-config": "^5.0.2",
+    "tailwindcss": "^3.4.0",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.4.1"
+  }
 }
