--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -121,6 +121,19 @@ services:
     profiles:
       - "dev"
 
+  frontend-prod:
+    build:
+      context: ./
+      dockerfile: ./frontend/docker/prod/Dockerfile
+    depends_on:
+      - backend-prod
+    env_file:
+      - .env
+    ports:
+      - "${NGINX_PORT}:80"
+    profiles:
+      - "prod"
+
   nginx-dev:
     image: "nginx:1.25.3-alpine-slim"
     depends_on:
