--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
 		"react-dom": "^18.2.0",
 		"tailwind-merge": "^2.2.0",
 		"tailwindcss-animate": "^1.0.7",
+		"usehooks-ts": "^2.9.1",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
