--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
 		"axios": "^1.6.3",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
+		"html-to-image": "^1.11.11",
 		"lucide": "^0.302.0",
 		"lucide-react": "^0.302.0",
 		"react": "^18.2.0",
