fix: change dockerfile to copy CDCs into frontend

--- a/frontend/docker/prod/Dockerfile
+++ b/frontend/docker/prod/Dockerfile
@@ -11,7 +11,7 @@ COPY --chown=node:node frontend/public ./
 COPY --chown=node:node frontend/postcss.config.js ./
 COPY --chown=node:node frontend/tailwind.config.js ./
 COPY --chown=node:node frontend/vite.config.ts ./
-# COPY --chown=node:node CDCs.json ./
+COPY --chown=node:node frontend/CDCs.json ./
 COPY --chown=node:node frontend/components.json ./
 COPY --chown=node:node frontend/index.html ./
 
