--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
 		"lucide": "^0.302.0",
 		"lucide-react": "^0.302.0",
 		"react": "^18.2.0",
+		"react-cookie": "^6.1.3",
 		"react-dom": "^18.2.0",
 		"tailwind-merge": "^2.2.0",
 		"tailwindcss-animate": "^1.0.7",
