--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.4.1"
+		"@biomejs/biome": "1.4.1",
+		"@types/chrome": "^0.0.268"
 	}
 }
