--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,10 +46,10 @@
 		"typescript": "^5.2.2",
 		"usehooks-ts": "^2.9.1",
 		"vite": "^5.0.8",
-		"zod": "^3.22.4"
+		"zod": "^3.22.4",
+		"@types/chrome": "^0.0.268"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.4.1",
-		"@types/chrome": "^0.0.268"
+		"@biomejs/biome": "1.4.1"
 	}
 }
