--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,34 +20,34 @@
 		"@radix-ui/react-tabs": "^1.0.4",
 		"@radix-ui/react-toast": "^1.1.5",
 		"@radix-ui/react-tooltip": "^1.0.7",
-		"@tanstack/react-query": "^5.15.0",
-		"@tanstack/react-query-devtools": "^5.15.0",
-		"@tanstack/react-router": "^1.0.0",
-		"@tanstack/router-devtools": "^1.0.0",
-		"@types/node": "^20.10.5",
-		"@types/react": "^18.2.43",
-		"@types/react-dom": "^18.2.17",
-		"@vitejs/plugin-react-swc": "^3.5.0",
-		"autoprefixer": "^10.4.16",
-		"axios": "^1.6.3",
+		"@tanstack/react-query": "^5.40.1",
+		"@tanstack/react-query-devtools": "^5.40.1",
+		"@tanstack/react-router": "^1.34.9",
+		"@tanstack/router-devtools": "^1.34.9",
+		"@types/chrome": "^0.0.268",
+		"@types/node": "^20.14.1",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
+		"@vitejs/plugin-react-swc": "^3.7.0",
+		"autoprefixer": "^10.4.19",
+		"axios": "^1.7.2",
 		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.0.0",
+		"clsx": "^2.1.1",
 		"html-to-image": "^1.11.11",
 		"lucide": "^0.302.0",
 		"lucide-react": "^0.302.0",
-		"postcss": "^8.4.32",
-		"postcss-load-config": "^5.0.2",
-		"react": "^18.2.0",
+		"postcss": "^8.4.38",
+		"postcss-load-config": "^5.1.0",
+		"react": "^18.3.1",
 		"react-cookie": "^6.1.3",
-		"react-dom": "^18.2.0",
-		"tailwind-merge": "^2.2.0",
-		"tailwindcss": "^3.4.0",
+		"react-dom": "^18.3.1",
+		"tailwind-merge": "^2.3.0",
+		"tailwindcss": "^3.4.3",
 		"tailwindcss-animate": "^1.0.7",
-		"typescript": "^5.2.2",
-		"usehooks-ts": "^2.9.1",
-		"vite": "^5.0.8",
-		"zod": "^3.22.4",
-		"@types/chrome": "^0.0.268"
+		"typescript": "^5.4.5",
+		"usehooks-ts": "^2.16.0",
+		"vite": "^5.2.12",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.4.1"
