--- a/lib/package.json
+++ b/lib/package.json
@@ -11,10 +11,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.10.5"
+    "@types/node": "^20.14.1"
   },
   "dependencies": {
-    "zod": "^3.22.4",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.5",
+    "zod": "^3.23.8"
   }
 }
