--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,9 @@
     "jsonwebtoken": "^9.0.2",
     "openid-client": "^5.6.5",
     "pg": "^8.11.5",
+    "pino": "^9.2.0",
+    "pino-http": "^10.1.0",
+    "pino-pretty": "^11.2.1",
     "reflect-metadata": "^0.2.2",
     "sqids": "^0.3.0",
     "tsx": "^4.11.2",
