--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.4.1",
     "@types/eslint": "^8.56.10",
+    "@types/on-finished": "^2.3.4",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.57.0",
@@ -34,6 +35,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "on-finished": "^2.4.1",
     "openid-client": "^5.6.5",
     "pg": "^8.11.5",
     "pino": "^9.2.0",
