docs: document new env variables

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,6 @@ VITE_FRONTEND_URL="http://localhost:5000"
 SESSION_MAX_AGE_MS=86400000
 VITE_CMS_EXTENSION_ID="ebjldebpahljhpakgngnandakdbajdnj"
 CHRONO_SECRET=""
+LOG_MODE="development" # if not set, defaults to NODE_ENV
+LOG_LEVEL="info"
+DB_LONG_RUNNING_QUERY_MS=2000
