--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,16 +8,10 @@ on:
 jobs:
   release:
     name: Build and deploy to prod
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: ssh into machine, and clone repo
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.KEY }}
-          port: ${{ secrets.PORT }}
-          script: |
+        run: |
             cd /home/ubuntu/clones
             cd chronofactorem-rewrite-prod
             git reset --hard HEAD
