--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -1,12 +1,6 @@
 name: Lint code and check formatting with BiomeJS
 
-on:
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+on: workflow_dispatch
 
 jobs:
   linting:
