feat: add search-service to /edit and /delete, updated env, docs

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,4 @@ CHRONO_SECRET=""
 LOG_MODE="development" # if not set, defaults to NODE_ENV
 LOG_LEVEL="info"
 DB_LONG_RUNNING_QUERY_MS=2000
+SEARCH_SERVICE_URL="http://chrono:4713"
