--- a/biome.json
+++ b/biome.json
@@ -7,6 +7,9 @@
 		"enabled": true,
 		"rules": {
 			"recommended": true,
+			"nursery": {
+				"noUnusedImports": "error"
+			},
 			"suspicious": {
 				"noExplicitAny": "off"
 			}
