--- a/lib/package.json
+++ b/lib/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+		"@biomejs/biome": "1.4.1",
     "@types/node": "^20.14.1"
   },
   "dependencies": {
