feat: search filters, loading and no results component

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
 		"axios": "^1.7.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"cmdk": "^1.0.0",
 		"html-to-image": "^1.11.11",
 		"lucide": "^0.302.0",
 		"lucide-react": "^0.302.0",
