build: bump minor deps, update code to be formatted and linted according to new biome

--- a/backend/biome.json
+++ b/backend/biome.json
@@ -1,8 +1,9 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.4.1/schema.json",
+  "root": false,
+  "$schema": "https://biomejs.dev/schemas/2.0.6/schema.json",
   "extends": ["../biome.json"],
   "files": {
-    "ignore": ["build/**/*", "data"]
+    "includes": ["src/**"]
   },
   "formatter": {
     "indentStyle": "space"
@@ -11,6 +12,18 @@
     "rules": {
       "suspicious": {
         "noExplicitAny": "off"
+      },
+      "style": {
+        "noParameterAssign": "error",
+        "useAsConstAssertion": "error",
+        "useDefaultParameterLast": "error",
+        "useEnumInitializers": "error",
+        "useSelfClosingElements": "error",
+        "useSingleVarDeclarator": "error",
+        "noUnusedTemplateLiteral": "error",
+        "useNumberNamespace": "error",
+        "noInferrableTypes": "error",
+        "noUselessElse": "error"
       }
     }
   }
