--- a/lib/biome.json
+++ b/lib/biome.json
@@ -1,7 +1,27 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.4.1/schema.json",
+  "root": false,
+  "$schema": "https://biomejs.dev/schemas/2.0.6/schema.json",
   "extends": ["../biome.json"],
   "files": {
-    "ignore": ["dist/**/*"]
+    "includes": ["**", "!**/dist/**/*"]
+  },
+  "formatter": {
+    "indentStyle": "space"
+  },
+  "linter": {
+    "rules": {
+      "style": {
+        "noParameterAssign": "error",
+        "useAsConstAssertion": "error",
+        "useDefaultParameterLast": "error",
+        "useEnumInitializers": "error",
+        "useSelfClosingElements": "error",
+        "useSingleVarDeclarator": "error",
+        "noUnusedTemplateLiteral": "error",
+        "useNumberNamespace": "error",
+        "noInferrableTypes": "error",
+        "noUselessElse": "error"
+      }
+    }
   }
 }
