--- a/backend/biome.json
+++ b/backend/biome.json
@@ -1,9 +1,13 @@
 {
   "root": false,
-  "$schema": "https://biomejs.dev/schemas/2.0.6/schema.json",
-  "extends": ["../biome.json"],
+  "$schema": "https://biomejs.dev/schemas/2.1.1/schema.json",
+  "extends": [
+    "../biome.json"
+  ],
   "files": {
-    "includes": ["src/**"]
+    "includes": [
+      "src/**"
+    ]
   },
   "formatter": {
     "indentStyle": "space"
