--- a/frontend/docker/dev/Dockerfile
+++ b/frontend/docker/dev/Dockerfile
@@ -1,38 +1,35 @@
 FROM node:22.17.0-bookworm-slim
 ENV NODE_ENV development
+
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
 
-RUN corepack enable
+RUN corepack enable pnpm && corepack install -g pnpm@latest-10
 
 WORKDIR /usr/local/app/frontend
-
 COPY ./frontend/package.json ./
-COPY ./frontend/pnpm-lock.yaml ./
 COPY ./frontend/tsconfig.json ./
 COPY ./frontend/tsconfig.node.json ./
 COPY ./frontend/biome.json ./
 COPY ./.env ./
 
-RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
-
 WORKDIR /usr/local/app/lib
-
 COPY ./lib/package.json ./
-COPY ./lib/pnpm-lock.yaml ./
 COPY ./lib/tsconfig.json ./
 
-RUN pnpm fetch
-RUN pnpm install -r --offline
+WORKDIR /usr/local/app
+COPY ./package.json ./
+COPY ./pnpm-lock.yaml ./
+COPY ./pnpm-workspace.yaml ./
+RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --prod -r -frozen-lockfile
 
-COPY ./lib/src /usr/local/app/lib/src
-
+WORKDIR /usr/local/app/lib
+COPY ./lib/src ./src
 RUN pnpm tsc --build
 RUN rm -rf src
 RUN mv dist src
 
 WORKDIR /usr/local/app/frontend
-
 COPY ./frontend ./
 
 CMD ["pnpm", "run", "dev", "--host"]
