--- a/frontend/docker/prod/Dockerfile
+++ b/frontend/docker/prod/Dockerfile
@@ -1,10 +1,9 @@
 FROM node:22.17.0-bookworm-slim AS build-stage
 ENV NODE_ENV production
+
+RUN corepack enable pnpm && corepack install -g pnpm@latest-10
+
 WORKDIR /usr/src/app/frontend
-
-ENV PNPM_HOME="/root/.local/share/pnpm"
-ENV PATH="${PATH}:${PNPM_HOME}"
-
 COPY --chown=node:node frontend/tsconfig.json ./
 COPY --chown=node:node frontend/tsconfig.node.json ./
 COPY --chown=node:node frontend/public ./
@@ -14,34 +13,26 @@ COPY --chown=node:node frontend/CDCs.json ./
 COPY --chown=node:node frontend/components.json ./
 COPY --chown=node:node frontend/index.html ./
 COPY --chown=node:node .env ./
-
-RUN npm install -g pnpm
-
 COPY --chown=node:node frontend/package.json ./
-COPY --chown=node:node frontend/pnpm-lock.yaml ./
-
-RUN pnpm fetch --prod
-RUN pnpm install -r --offline --prod
 
 WORKDIR /usr/src/app/lib
-
 COPY --chown=node:node ./lib/package.json ./
-COPY --chown=node:node ./lib/pnpm-lock.yaml ./
 COPY --chown=node:node ./lib/tsconfig.json ./
 
-RUN pnpm fetch
-RUN pnpm install -r --offline
+WORKDIR /usr/src/app
+COPY --chown=node:node ./package.json ./
+COPY --chown=node:node ./pnpm-lock.yaml ./
+COPY --chown=node:node ./pnpm-workspace.yaml ./
+RUN pnpm install --prod -r
 
+WORKDIR /usr/src/app/lib
 COPY --chown=node:node ./lib/src ./src
-
 RUN pnpm tsc --build
 RUN rm -rf src
 RUN mv dist src
 
 WORKDIR /usr/src/app/frontend
-
 COPY --chown=node:node frontend/src ./src
-
 RUN pnpm run build
 
 FROM nginx:1.25.3-alpine-slim
