--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-cookie": "^8.0.1",
+    "lib": "workspace:*",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
