--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,13 +5,11 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ES2022",
     "skipLibCheck": true,
-
     // shadcn/ui setup
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     },
-
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -19,7 +17,6 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
@@ -30,9 +27,8 @@
   },
   "include": ["src"],
   "references": [
-    { "path": "./tsconfig.node.json" },
     {
-      "path": "../lib"
+      "path": "./tsconfig.node.json"
     }
   ]
 }
