build: fix lib exports

--- a/lib/package.json
+++ b/lib/package.json
@@ -7,6 +7,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "exports": {
+    ".": {
+      "import": "./src/index.js",
+      "default": "./src/index.js"
+    }
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
